Added alt in HTML

--- a/index.html
+++ b/index.html
@@ -19,37 +19,37 @@
     <h1>Stream One</h1>
     <div class="card">
         <a href="https://en.wikipedia.org/wiki/HTML5" target="_blank">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1280px-HTML5_logo_and_wordmark.svg.png">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1280px-HTML5_logo_and_wordmark.svg.png" alt="HTML5 logo">
             <h2>HTML5</h2>
         </a>
     </div>
     <div class="card">
         <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/CSS3_logo_and_wordmark.svg/1024px-CSS3_logo_and_wordmark.svg.png">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/CSS3_logo_and_wordmark.svg/1024px-CSS3_logo_and_wordmark.svg.png" alt="CSS3 Logo">
             <h2>CSS3</h2>
         </a>
     </div>
     <div class="card">
         <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">
-            <img src="https://d1yjjnpx0p53s8.cloudfront.net/styles/logo-thumbnail/s3/082014/js1_0.png?itok=9fCD5b30">
+            <img src="https://d1yjjnpx0p53s8.cloudfront.net/styles/logo-thumbnail/s3/082014/js1_0.png?itok=9fCD5b30" alt="JavaScript logo">
             <h2>JavaScript</h2>
         </a>
     </div>
     <div class="card">
         <a href="https://en.wikipedia.org/wiki/Git" target="_blank">
-            <img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png">
+            <img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="Git logo">
             <h2>Git</h2>
         </a>
     </div>
     <div class="card">
         <a href="https://en.wikipedia.org/wiki/GitHub" target="_blank">
-            <img src="https://cdn.worldvectorlogo.com/logos/github-1.svg">
+            <img src="https://cdn.worldvectorlogo.com/logos/github-1.svg" alt="GitHub logo">
             <h2>GitHub</h2>
         </a>
     </div>
     <div class="card">
         <a href="https://www.gitpod.io/" target="_blank">
-            <img src="https://pbs.twimg.com/profile_images/1114153393306648578/6O8-Z_Rc.png">
+            <img src="https://pbs.twimg.com/profile_images/1114153393306648578/6O8-Z_Rc.png" alt="GitPod logo">
             <h2>GitPod</h2>
         </a>
     </div>
